# fremantle_weather

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml
assets/: ebook.css
src/: backend.rs  main.rs
