[package]
name = "fremantle_weather"
version = "0.1.0"
authors = ["ToastXC <100072983+toastxc@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
lazy_static = {version = "1.5.0", optional = true}
reqwest = { version = "0.12.24", features = ["json"], optional = true}
serde = { version = "1.0.228", features = ["derive"], optional = false}
serde_json = {version = "1.0.145", optional = false } 

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [ "dioxus/server", "dep:lazy_static", "dep:reqwest"]


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
